[package]
name = "tokio_codec"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "tokio codec. auto impl tokio_util::codec::Encoder and tokio_util::codec::Decoder. "

[dependencies]
tokio_codec_macros = { path = "macros", version = "0.0.1" }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
paste = "1"

xid = { version = "1.1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"], default-features = false }
tokio-util = { version = "0.7", features = ["codec", "net"] }
futures-util = { version = "0.3", features = ["sink"] }